# geek_test

./: .gitignore  README.md  pyproject.toml
app/: models.py  serializer.py  urls.py  views.py
app/migrations/: 0001_initial.py
todo/: settings.py
