[tool.poetry]
name = "geek-test"
version = "0.1.0"
description = ""
authors = ["Arybzhan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.3"
django-environ = "^0.13.0"
psycopg2-binary = "^2.9.11"
djangorestframework = "^3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
